--- a/facebook.html
+++ b/facebook.html
@@ -15,9 +15,10 @@
   </head>
   <body>
     <!-- Our Facebook layout will go here. -->
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-default navbar-fixed-top">
       NAVBAR
     </nav>
+
     <!-- The container for our grid. The outermost grid must be placed within
      a `container` or `container-fluid` class. (Meaning: If you nest a grid
      within a grid, you should not define another `container`)
@@ -33,6 +34,8 @@
       <!-- Main feed: A cell that spans 7 columns -->
       <div class="col-md-7">
         Main Feed
+        <div style="height: 99999px;">
+          </div>
       </div>
       <!-- Right sidebar: A cell that spans 3 columns -->
       <div class="col-md-3">
